--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "tweeties",
-  "version": "1.0.0",
-  "description": "a mini twitter clone",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "centralized-login",
+  "version": "0.1.0",
+  "private": true,
+  "devDependencies": {
+    "react-scripts": "0.9.5"
   },
-  "author": "Sivadass N",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-router-dom": "^4.3.1",
-    "request": "^2.88.0"
+    "auth0-js": "^9.0.0",
+    "bootstrap": "^3.3.7",
+    "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
